sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment_Report_Subsection__mdt/Assessment_Report_Subsection__mdt.object-meta.xml
<CustomObject>
    <label>Assessment Report Subsection</label>
    <pluralLabel>Assessment Report Subsections</pluralLabel>
</CustomObject>