sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment_Report_Subsection__mdt/fields/Assessment_Report_Section__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Report_Section__c</fullName>
    <label>Assessment Report Section</label>
    <referenceTo>Assessment_Report_Section__mdt</referenceTo>
    <relationshipLabel>Assessment Report Sections</relationshipLabel>
    <relationshipName>Assessment_Report_Sections</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>