sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment_Report_Subsection__mdt/fields/Body_Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Body_Label_Name__c</fullName>
    <label>Body Label Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>