sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment_Report_Subsection__mdt/fields/Image_Width__c.field-meta.xml
<CustomField>
    <fullName>Image_Width__c</fullName>
    <label>Image Width</label>
    <length>20</length>
    <type>Text</type>
</CustomField>