sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment_Report_Subsection__mdt/fields/Render_Flags__c.field-meta.xml
<CustomField>
    <fullName>Render_Flags__c</fullName>
    <description>API name of one or more comma separated checkbox fields found on, or looked up from, Assessment__c</description>
    <label>Render Flags</label>
    <length>60</length>
    <type>Text</type>
</CustomField>