sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment_Report_Subsection__mdt/fields/Title_Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Title_Label_Name__c</fullName>
    <label>Title Label Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>