sfdc-ac-transition-pkg/force-app/main/default/objects/Assessment_Report_Subsection__mdt/listViews/All_Subsections.listView-meta.xml
<ListView>
    <fullName>All_Subsections</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Assessment_Report_Section__c</columns>
    <columns>Body_Label_Name__c</columns>
    <columns>Render_Flags__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Title_Label_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Subsections</label>
    <language>en_US</language>
</ListView>